# pulsar-x2-stats

./: .gitignore  Cargo.toml  PLAN.md  battery_log.jsonl  clippy.toml  find_battery_pattern.py  get_battery.py  get_battery_hid.py  monitor_battery.py  parse_sequence.py  pulsar_server.py  pulsar_status.py  waybar_proxy.py
assets/: dashboard.html
examples/: dump_hid.rs
packaging/systemd/: pulsar-daemon.service
packaging/udev/: 70-pulsar-x2.rules
packaging/waybar/: custom-pulsar.json  style-snippet.css
src/: device.rs  format.rs  http.rs  ipc.rs  lib.rs  main.rs  notify.rs  poll.rs  state.rs
src/cli/: daemon.rs  mod.rs  read_power.rs  waybar.rs
src/protocol/: mod.rs
src/transport/: hidapi_impl.rs  mock.rs  mod.rs
tests/: http.rs  ipc.rs  poll_state_machine.rs  protocol_corpus.rs
thoughts/shared/plans/: 2026-04-26-rust-rewrite.md
thoughts/shared/research/: 2026-04-26-charging-shows-disconnected.md  2026-04-26-rust-rewrite-research.md
